[package]
name = "qtun"
version = "0.2.0"
authors = ["Max Lv <max.c.lv@gmail.com>"]
repository = "https://github.com/madeye/qtun"
license = "MIT"
edition = "2021"

[[bin]]
name = "qtun-client"
path = "src/client.rs"

[[bin]]
name = "qtun-server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.2.1"
futures = "0.3"
rustls = "0.21.8"
rustls-pemfile  = "1.0.2"
rustls-native-certs = "0.6.1"
webpki-roots = "0.25.2"
quinn = "0.10.2"
structopt = "0.3"
anyhow = "1.0"
tracing = "0.1"
log = "0.4"
env_logger = "0.10.0"
dirs = "5.0.1"
