[package]
name = "qtun"
version = "0.3.0"
authors = ["Max Lv <max.c.lv@gmail.com>"]
repository = "https://github.com/shadowsocks/qtun"
license = "MIT"
edition = "2021"

[[bin]]
name = "qtun-client"
path = "src/client.rs"

[[bin]]
name = "qtun-server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
futures = "0.3"
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-pemfile = "2"
rustls-pki-types = "1"
webpki-roots = "1"
quinn = "0.11"
quinn-proto = "0.11"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
rustls-native-certs = "0.8"
